# fastapi-blog

./: .gitignore  main.py  pyproject.toml  todo.txt
api/: posts.py  users.py
core/: config.py
db/: database.py  models.py
