[tool.poetry]
name = "fastapi-blog"
version = "0.1.0"
description = ""
authors = ["Mario Krajacic"]

[tool.poetry.dependencies]
python = "^3.9"
uvicorn = "^0.17.6"
fastapi = "^0.75.1"
pydantic = "^1.9.0"
SQLAlchemy = "^1.4.35"
python-dotenv = "^0.20.0"
psycopg2-binary = "^2.9.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
